# Little_Lelouch_01

./: BestMove.h  Board.h  CMakeLists.txt  Move.h  main.cpp  readme.txt
Little_Lelouch_01/: Little_Lelouch_01.cpp  Little_Lelouch_01.h
Little_Lelouch_01/lelouch/: Board.cpp  Helpers.cpp  lelouch.sln  lelouch.vcxproj.filters  main.cpp
Little_Lelouch_01/lelouch/lelouch/: Board.cpp  Board.h  Helpers.cpp  Helpers.h  Knowledge.cpp  Knowledge.h  Move.cpp  Move.h  lelouch.vcxproj  lelouch.vcxproj.filters  main.cpp
Little_Lelouch_01/lelouch/lelouch/x64/Debug/: vc140.idb
Little_Lelouch_01/lelouch/lelouch/x64/Debug/lelouch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lelouch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
